// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeDeprecations renders Issues and IssueSummary components when there are deprecations 1`] = `
<StatusGroup
  className={null}
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={
        Object {
          "critical": 2,
          "info": 1,
        }
      }
    />
  }
  title="Node Settings"
>
  <Issues
    className={null}
    issues={
      Array [
        Object {
          "level": "info",
        },
        Object {
          "level": "critical",
        },
        Object {
          "level": "critical",
        },
      ]
    }
  />
</StatusGroup>
`;

exports[`NodeDeprecations renders a success message when there are no deprecations 1`] = `
<StatusGroup
  className={null}
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={Object {}}
    />
  }
  title="Node Settings"
>
  <p
    className="kuiText kuiSubduedText"
  >
    No node settings deprecations
  </p>
</StatusGroup>
`;

exports[`NodeDeprecations renders the className property 1`] = `
<StatusGroup
  className="myClass"
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={Object {}}
    />
  }
  title="Node Settings"
>
  <p
    className="kuiText kuiSubduedText"
  >
    No node settings deprecations
  </p>
</StatusGroup>
`;
